<resources>
    <string name="app_name">Whazzup</string>
    <string name="phone">phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile_set_up">UserProfileSetUp</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="hey_there_i_m_using_whazzup">hey there i\'m using whazzup !</string>
    <string name="set_your_profile_picture_here">Set your profile picture here</string>
    <string name="do_it_later">do it later</string>
    <string name="update_profile">Update profile</string>
    <string name="username">username</string>
    <string name="todo_backbtn">TODO</string>
</resources>